k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seel
  namespace: adm
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.seel: semver:~1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seel
  strategy: {}
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: seel
    spec:
      containers:
      - name: seel
        image: sgryczan/seel:0.0.2
        imagePullPolicy: Always
      serviceAccountName: seel
      enableServiceLinks: true
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: adm
  name: seel
spec:
  type: ClusterIP
  selector:
    app: seel
  ports:
  - name: http
    port: 80
    targetPort: 8080
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: seel
  namespace: adm
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  tls:
  - hosts:
    - seel.sre-dev.solidfire.net
    secretName: wildcard-cert
  rules:
  - host: seel.sre-dev.solidfire.net
    http:
      paths:
      - backend:
          serviceName: seel
          servicePort: 80
---
